--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,11 @@ a {
     text-decoration: none;
 }
 
+H2 {
+    font-size: 3vw;
+
+}
+
 /* header */
 header {
     display: block;
@@ -96,18 +101,21 @@ ul {
 
 /* filter */
 form {
-    display: grid;
+    float: left;
     position: sticky;
+    display: grid;
+
     top: 0;
 
     /* max-width: 960px; */
     margin: 0 auto;
+    /* margin-top: 20px; */
 
     grid-template-columns: repeat(5, 1 fr);
     grid-gap: 20px;
 
 
-    float: left;
+
     /* position: sticky; */
     height: 100% 900px;
     width: 20%;
@@ -127,6 +135,7 @@ form input{
     /* width: 100%; */
     grid-column: auto / span 1;
     background: rgb(247, 243, 7);
+    text-align: right;
 }
 
 form label{
@@ -172,7 +181,7 @@ main {
     display: flex;
 /* это для высоты */
     /* flex: 1 300px; */
-    flex-basis: 300px;
+    flex-basis: 100px;
     flex-wrap: wrap;
     /* min-width: 300px; */
 }
@@ -215,27 +224,26 @@ main {
 .product-link-view{
     width: 200px;
     font-size: 30px;
-    /* border: 3px solid #001e50;
-    border-radius: 44px; */
 }
-/* fixed */
 
-.account-actions {
-    z-index: 110;
+
+
+/* fixed */
+.right-bar {
+    z-index: 1;
     position: fixed;
     top: 150px;
     right: 40px;
 }
-
-.actions-bar {
+.right-bar-list {
     display: flex;
     flex-direction: column;
     width: 48px;
     margin-left: 24px;
-    transition: width 0.3s;
+    transition-property: width;
+    transition-duration: 0.5s;
 }
-
-.action img  {
+.right-bar-list-item img  {
     width: 48px;    
     height: 48px;
     position: absolute;
@@ -247,7 +255,7 @@ main {
     height: 48px;
 }
 */
-.action {
+.right-bar-list-item {
     display: flex;
     flex-direction: row;
     background-color: rgba(25, 88, 182, 0.9);
@@ -261,19 +269,16 @@ main {
     align-items: center;
 }
 
-
-.action span {
+.right-bar-list-item span {
     position: absolute;
     font-size: 1.4em;
     left: 120px;
     width: 200px;
 }
-
-.actions-bar a {
+.right-bar-list a {
     color: white;
 }
-
-.actions-bar:hover {
+.right-bar-list:hover {
     width: 240px;
 }
 /*
@@ -296,12 +301,184 @@ main {
 */
 
 
+/*gallery*/
+
+.gallery{
+    position: relative;
+    left:25%;
+    width: 75%;
+    border-width: 3px;
+    border-style: solid;
+    border-color: #cf3404;
+}
+
+
+
+.gallery-pictures{
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+}
+
+#largeImg {
+    border: solid 1px #ccc;
+    width: 70%;
+    height: 70%;
+    padding: 5px;
+  }
+  
+  /* #thumbs{
+      display: flex;
+      flex-direction: row;
+      flex: wrap;
+  } */
+
+  #thumbs a {
+    border: solid 1px #ccc;
+    width: 100px;
+    height: 100px;
+    padding: 3px;
+    margin: 2px;
+    float: left;
+  }
+  
+  #thumbs a:hover {
+    border-color: #FF9900;
+  }
+  
+  #thumbs li {
+    list-style: none;
+  }
+  
+  #thumbs {
+    margin: 0;
+    padding: 0;
+  }
+
 
 
 
 /* footer */
 
+footer {
+    display: flex;
+    width: 100%;
+    height: 240px;
+    border-top: 1px solid lightgray;
+    align-items: flex-start;
+    justify-content: center;
+}
+
+.footer-menu {
+    display: inherit;
+    margin: 0 auto;
+}
+
+.footer-category {
+    display: inherit;
+    flex-direction: column;
+    width: 300px;
+    padding: 0;
+    list-style-type: none;
+}
+
+.footer-category-title {
+    font-size: 0.8em;
+}
+
+.footer-category-item {
+    line-height: 1.8em;
+}
+
+.footer-category-item-link {
+    color: rgb(51, 104, 150);
+}
+
 /* media queries */
 @media (max-width: 1280px) {
+/* @media (max-width: 580px) { */
+    body {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+    }
 
+
+
+    form {
+        position: static;
+        display: grid;
+        /* top: 0; */
+    
+        /* max-width: 960px; */
+        margin: 0 auto;
+    
+        grid-template-columns: repeat(5, 1 fr);
+        grid-gap: 20px;
+    
+    
+        /* float: left; */
+        /* position: sticky; */
+        height: 100% 900px;
+        width: 100%;
+        border-width: 3px;
+        border-style: solid;
+        border-color: #3911e9;
+     }
+
+     form label{
+        /* grid-column: auto / span 4;
+        text-align: left;
+        background: rgb(255,150,150); */
+        font-size: 1.5rem;
+    }
+
+    /* #logo, .footer-menu {
+        margin-left: 5vw;
+    } */
+
+    /* #logo {
+        width: 40px;
+        overflow: hidden;
+        flex-shrink: 0;
+    } */
+
+    /* header .menu-item {
+        margin-right: 30px;
+        font-size: 1.12em;
+    } */
+
+    /* .sidebar {
+        position: relative;
+        width: calc(100% - 40px);
+        padding-bottom: 20px;
+        margin: 20px;
+    } */
+
+    /* .catalog {
+        height: 200px;
+        border-bottom: none;
+        
+    } */
+
+    /* .catalog-list {
+        margin: 0 auto;
+        height: 200px;
+        display: grid;
+        grid-template-columns: auto auto auto;
+    } */
+
+    /* .sale-small {
+        margin: 0 auto;
+    } */
+
+    /* .products-container h2 {
+        text-align: center;
+    } */
+
+    .footer-menu {
+        flex-direction: column;
+        flex: wrap;
+        justify-content: space-around;
+    }
 }
